# outline-watchdog

./: .gitignore  Cargo.toml  README.md  install.sh  install_server.sh
src/: aws_route53.rs  current_ip.rs  main.rs
